--- a/start.html
+++ b/start.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My third github third repo</title>
 </head>
 <body>
-  <h1>My third repo is not html</h1>
+  <h1>My third repo</h1>
+  <h3>New destination</h3>
 </body>
 </html>
