--- a/start.html
+++ b/start.html
@@ -9,6 +9,10 @@
 <body>
   <h1>My third repo</h1>
   <h3>New destination</h3>
+  <div>
   <img src="sohrab.JPG" alt="">
+  <h3>New blog</h3>
+  <h5>Look mama i can write a blog</h5>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, quisquam? Doloremque atque nesciunt fugiat soluta inventore. Suscipit, ut minus tempore, illo facilis eligendi quis quos officiis delectus enim eius aut dolore saepe voluptate dicta! Ea et a molestiae? Cumque, nemo!</p></div>
 </body>
 </html>
